--- a/login_project/css/login_style.css
+++ b/login_project/css/login_style.css
@@ -37,7 +37,7 @@ a:hover {
 		border-bottom: 2px solid #a1a1a1;
 		text-align: center;
 		padding: 3% 0 0 0;
-		border-radius; 10px 10px 0 0;
+		border-radius: 10px 10px 0 0;
 }
 
 form {
