--- a/login_project/css/login_style2.css
+++ b/login_project/css/login_style2.css
@@ -22,8 +22,6 @@ a:hover {
 }
 
 .login {
-	width: 500px;
-	height: 323px;
 	border: 2px solid #a1a1a1;
 	box-shadow: inset 0 0 5px #a1a1a1;
 	border-radius: 10px;
@@ -37,7 +35,7 @@ a:hover {
 		border-bottom: 2px solid #a1a1a1;
 		text-align: center;
 		padding: 3% 0 0 0;
-		border-radius; 10px 10px 0 0;
+		border-radius: 10px 10px 0 0;
 }
 
 form {
@@ -49,8 +47,6 @@ form {
 input[type="text"],
 input[type="password"] {
 	outline: none;
-	font-size: 20px;
-	width: 450px;
 	font-family: caption;
 	border: 4px double #dedee0;
 	padding: 5px;
@@ -67,10 +63,6 @@ input[type="[password"]:focus {
 	outline: none;
 	color: #a1a1a1;
 	font-weight: bold;
-	font-size: 20;
-	width: 125px;
-	height: 50px;
-	margin: 45px 0 0 110px;
 	text-align: center;
 	border-radius: 25px;
 	background-color: #dedee0;
@@ -83,12 +75,8 @@ input[type="[password"]:focus {
 	box-shadow: inset 0 0 5px #000;
 }
 
-.chk {
-	margin: 5% 0 0 0;
-}
 
 .rem {
-	margin: 5% 0 0 10px;
 	font-size: 12px;
 }
 
@@ -97,9 +85,66 @@ input[type="[password"]:focus {
 	font-size: 3em;
 }
 
-.forgot a {
-	margin: 0 0 0 35%;
-}
 
 /*=================================================
-screen size 500px or wider 
+screen size 500px or wider ,
+following styles will be applied
+==================================================*/
+@media (min-width:500px){
+	.login {
+		width: 500px;
+		height: 323px;
+	}
+	input[type="text"],
+	input[type="password"] {
+		width: 430px;
+		font-size: 20px;
+	}
+	.btn {
+		font-size: 20px;
+		width: 125px;
+		height: 50px;
+		margin: 45px 0 0 110px;
+	}
+	.forgot a {
+		margin: 0 0 0 35%;
+	}
+	.chk {
+		margin: 5% 0 0 0;
+	}
+	.rem {
+		margin: 5% 0 0 10px;
+	}
+}
+
+/*======================================================
+screen size less than 500px wide
+following styles will be applied
+======================================================*/
+@media (max-width:499px){
+	.login {
+		width: 300px;
+		height: 297px;
+		background-color: #eff0f2;
+	}
+	input[type="text"],
+	input[type="password"] {
+		width: 250px;
+		font-size: 15px;
+	}
+	.btn {
+		font-size: 14px;
+		width: 225px;
+		height: 40px;
+		margin: 15% 0 0 7%;
+	}
+	.forgot a {
+		margin: 0 0 0 25%
+	}
+	.chk {
+		margin: 6% 0 0 0;
+	}
+	.rem {
+		margin: 6% 0 0 5%;
+	}
+}
