--- a/login_project/css/login_style.css
+++ b/login_project/css/login_style.css
@@ -57,8 +57,8 @@ input[type="password"] {
 	margin: 5% 0 0 0;
 }
 
-input[type="text"]:focus,
-input[type="[password"]:focus {
+input[type="password"]:focus,
+input[type="text"]:focus {
 	border: 0 0 5px #000;
 	box-shadow: inset 0 0 10px #a1a1a1;
 }
