--- a/login_project/css/login_style2.css
+++ b/login_project/css/login_style2.css
@@ -54,7 +54,7 @@ input[type="password"] {
 }
 
 input[type="text"]:focus,
-input[type="[password"]:focus {
+input[type="password"]:focus {
 	border: 0 0 5px #000;
 	box-shadow: inset 0 0 10px #a1a1a1;
 }
