--- a/cinema/css/cinema_style.css
+++ b/cinema/css/cinema_style.css
@@ -4,3 +4,9 @@ h1 {
     text-transform: uppercase;
     color: #fff;
 }
+
+.card-img-top {
+    width: 100%;
+    height: 15rem;
+    object-fit: cover;
+}
